Increase amount of size for team name on profiles to prevent wrapping some that aren't _that_ long

--- a/src/modules/better-ui/styles/profile.css
+++ b/src/modules/better-ui/styles/profile.css
@@ -473,3 +473,15 @@ a.friendsProfileView-randomFriend {
 .hunterProfileItemsView-categoryContent-item.uncollected .hunterProfileItemsView-categoryContent-item-padding {
   background-color: #ededed;
 }
+
+.hunterInfoView-wrapper .hunterInfoView-idCardBlock-teamName {
+  width: 89px;
+  margin-left: -3px;
+}
+
+.hunterInfoView-wrapper .hunterInfoView-idCardBlock-teamName span {
+  top: 0;
+  right: 0;
+  left: 0;
+  transform: none;
+}
